<resources>
    <string name="app_name">UdemyCourse</string>
    <string name="title_activity_sqlite_database">SqliteDatabaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_content_provider">ContentProviderActivity</string>
    <string name="title_activity_task_timer">TaskTimerActivity</string>
    <string name="task_timer__add_task">Add Task</string>
    <string name="task_timer_show_durations">Durations Report</string>
    <string name="task_timer_settings">Settings</string>
    <string name="task_timer_show_about">About TaskTimer</string>
    <string name="task_timer_generate">Generate data</string>
    <string name="task_timer_task_message">No Task Selected</string>
    <string name="add_edit_name_hint">Task name: required</string>
    <string name="add_edit_description_hint">Task description(optional)</string>
    <string name="add_edit_sort_hint">Order: sorts low to high</string>
    <string name="add_edit_save_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="task_timer_instructions_heading">Instructions</string>
    <string name="task_timer_instructions">Use add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list. Tasks with same sort order will be sorted alphabetically \n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and delete buttons if you want to change the edit details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDialog_message">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDialog_positive_caption">Continue editing</string>
    <string name="cancelEditDialog_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright \u00A9 2021 Learn Android</string>
    <string name="about_weblink">Instructions available at www.learnandroid.academy</string>
    <string name="about_email">For support, email shubhamisnotlooser@gmail.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="current_timing_text">Timing %1$s</string>
    <string name="td_text_name">Task name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="title_activity_durations_report">DurationsReportActivity</string>
    <string name="rm_title_filter_day">Show Day</string>
    <string name="rm_title_filter_week">Show week</string>
    <string name="rm_title_filter_date">Set report day</string>
    <string name="rm_title_delete">Delete old timings</string>
    <string name="date_title_filter">Select date for report</string>
    <string name="date_title_delete">Select date to delete up to</string>
    <string name="delete_timings_message">\"Are you sure you want to delete all timings before %1s?"</string>
    <string name="action_undo">Undo</string>
</resources>