<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="1.0.0" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_copyright" />

    <TextView
        android:id="@+id/about_weblink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/about_weblink" />

    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:text="@string/about_email" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_credits" />
</LinearLayout>